# psychics_testing

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: main.py  psychics.py
src/api/: api.py  dependencies.py
src/api/routers/: expected_number.py  homepage.py  new_test.py
src/models/: two_digit_number.py
src/services/: entities.py  history.py  psychics.py
src/sessions/: all_sessions.py  session.py
src/static/: styles.css
src/templates/: homepage.html  new_test.html
